k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loginbbs-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loginbbs
  template:
    metadata:
      labels:
        app: loginbbs
    spec:
      containers:
        - name: loginbbs
          image: gauravkumar4578/loginbbs:latest
          ports:
            - containerPort: 5000
